@@ -6,7 +6,7 @@
     "username": "zekyxzmt",
     "password": "Magnetic@1418",
     "remotePath": "/home/zekyxzmt/public_html/erpv2/",
-    "uploadOnSave": true,
+    "uploadOnSave": false,
     "useTempFile": false,
     "openSsh": false
 }
