@@ -1,5 +1,7 @@
 <?php 
  return [ 
+"filter" => "بحــث",
+"all" => "جميع الشيكات",
 "status" => " حالة الشيك",
 "account_id" => " الحساب",
 "client_name" => "ألاسم",
