@@ -1,3 +1,4 @@
+
 @extends('layouts.app')
 
 @section('title', __('sale.pos_sale'))
