@@ -111,6 +111,7 @@ ___
 اخفاء نفقات اضافيه\
 
 ______________
+
 لضافه للوحدات في الاعدادات
 م نالمنتجات
 استيبراد المخزون الافتتاحي  x
@@ -134,3 +135,7 @@ remove رقم الاتصال     حاله الشحن     واخر3
 ______________
 
 checknumber to be only number
+
+__________
+overlap المبيعات في آخر 30 يومًا with  السنة المالية الحالية and add button in dashboard
+__________
